--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Aguafina+Script" rel="stylesheet">
     <script src="script1.js"></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5264181465792774",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body>
